finsihed part 1 of the video series

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,19 @@
 plugins {
     // Apply the application plugin to add support for building a CLI application in Java.
     id 'application'
+    // use lombok
+    id "io.freefair.lombok" version "6.3.0"
 }
 
 repositories {
     // Use Maven Central for resolving dependencies.
     mavenCentral()
+}
+
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
 }
 
 dependencies {
@@ -25,6 +33,11 @@ testing {
             useJUnitJupiter('5.7.2')
         }
     }
+}
+
+java {
+    sourceCompatibility = JavaVersion.VERSION_11
+    targetCompatibility = JavaVersion.VERSION_11
 }
 
 application {
